# NNQS

./: .gitignore  Project.toml  README.md
debug/: check_energy.jl  check_inplace_kron.jl  check_sampling.jl  ising_chain.jl  test_autoregressivesampling.ipynb  test_autoregressivesampling.jl  xxz_chain.jl
doc/: notes.docx  ~$notes.docx
interface_qcqc/: CMakeLists.txt  a.out  c2test  calc_ham_coeff.py  coupled_states.jl  debug_info  dev_mol_hamiltonian.jl  dmrgnnqs.jl  gen_ham.py  h2.jl  mol_hamiltonian.jl  mylib  objtest  parallel_h2.jl  parallel_run.sh  read_tran  read_tran.cpp  read_tran.c~  readme.txt  run.sh  runtests.jl  tempCodeRunnerFile.c  tempCodeRunnerFile.jl  test
interface_qcqc/data/: lih.json  mps_D5.txt
interface_qcqc/interface_fermions/: README.txt  dmrg_nnqs.jl  gen_data.py
interface_qcqc/mol_ham_data/: .parse.sh.swp  gen.sh  parse.sh  reference_energy.txt
interface_qcqc/mol_ham_data/b/: gen_ham.py  log  qubit_op.data  qubit_op_s.data
interface_qcqc/mol_ham_data/be/: .gen_ham.py.swp  gen_ham.py  log  qubit_op.data  qubit_op_s.data
interface_qcqc/mol_ham_data/beh2/: gen_ham.py  log  log_100  qubit_op.data  qubit_op_s.data
interface_qcqc/mol_ham_data/c/: gen_ham.py  log  qubit_op.data  qubit_op_n.data  qubit_op_s.data
interface_qcqc/mol_ham_data/c2/: gen_ham.py  qubit_op.data  qubit_op_n.data  qubit_op_s.data
interface_qcqc/mol_ham_data/co2/: gen_ham.py  qubit_op.data
interface_qcqc/mol_ham_data/co2_116/: gen_ham.py  qubit_op.data  qubit_op_n.data  qubit_op_s.data
interface_qcqc/mol_ham_data/h2/: gen_ham.py  qubit_op.data  qubit_op_s.data
interface_qcqc/mol_ham_data/h2_054/: log  qubit_op.data
interface_qcqc/mol_ham_data/h2_059/: log  qubit_op.data
interface_qcqc/mol_ham_data/h2_064/: log  qubit_op.data
interface_qcqc/mol_ham_data/h2_068/: gen_ham.py  log  qubit_op.data
interface_qcqc/mol_ham_data/h2_078/: log  qubit_op.data
interface_qcqc/mol_ham_data/h2_084/: log  qubit_op.data
interface_qcqc/mol_ham_data/h2_095/: log  qubit_op.data
interface_qcqc/mol_ham_data/h2_105/: log  qubit_op.data
interface_qcqc/mol_ham_data/h2_127/: log  qubit_op.data  qubit_op_n.data
interface_qcqc/mol_ham_data/h2_2/: gen_ham.py  qubit_op.data
interface_qcqc/mol_ham_data/h2o/: gen_ham.py  qubit_op.data  qubit_op_n.data  qubit_op_s.data
interface_qcqc/mol_ham_data/h2o_2/: gen_ham.py  qubit_op.data  qubit_op_n.data  qubit_op_s.data
interface_qcqc/mol_ham_data/li2/: .gen_ham.py.swp  gen_ham.py  log  qubit_op.data  qubit_op_s.data
interface_qcqc/mol_ham_data/lih/: gen_ham.py  qubit_op.data  qubit_op_n.data
interface_qcqc/mol_ham_data/lih_120/: log  qubit_op.data
interface_qcqc/mol_ham_data/lih_134/: log  qubit_op.data
interface_qcqc/mol_ham_data/lih_144/: log  qubit_op.data
interface_qcqc/mol_ham_data/lih_164/: log  qubit_op.data
interface_qcqc/mol_ham_data/lih_174/: log  qubit_op.data
interface_qcqc/mol_ham_data/lih_184/: log  qubit_op.data
interface_qcqc/mol_ham_data/lih_200/: log  qubit_op.data  qubit_op_s.data
interface_qcqc/mol_ham_data/lih_220/: gen_ham.py  log  qubit_op.data
interface_qcqc/mol_ham_data/n2/: gen_ham.py  qubit_op.data
interface_qcqc/mol_ham_data/n2_080/: log  qubit_op.data
interface_qcqc/mol_ham_data/n2_090/: log  qubit_op.data
interface_qcqc/mol_ham_data/n2_100/: log  qubit_op.data  qubit_op_s.data
interface_qcqc/mol_ham_data/n2_110/: gen_ham.py  log  qubit_op.data
interface_qcqc/mol_ham_data/n2_140/: gen_ham.py~  log  qubit_op.data
interface_qcqc/mol_ham_data/n2_160/: log  qubit_op.data
interface_qcqc/mol_ham_data/n2_180/: log  qubit_op.data
interface_qcqc/mol_ham_data/n2_200/: log  qubit_op.data
interface_qcqc/mol_ham_data/nh3/: gen_ham.py  qubit_op.data  qubit_op_n.data  qubit_op_s.data
interface_qcqc/mol_ham_data/template/: gen_ham.py
interface_qcqc/read_tran.dSYM/Contents/: Info.plist
interface_qcqc/read_tran.dSYM/Contents/Resources/DWARF/: read_tran
interface_qcqc/test.dSYM/Contents/Resources/DWARF/: test
parallel/: parallel_nqs.jl
src/: NNQS.jl  includes.jl
src/auxiliary/: params.jl
src/auxiliary/nn/: basic.jl
src/hamiltonian/: defs.jl  energy.jl  energy_exact.jl  energy_sr.jl  energy_util.jl  hamiltonian.jl  interface.jl  util.jl
src/nnqs/: defs.jl  mps.jl  rbm.jl
src/sampler/: Metropolis.jl  autoregressive.jl  batchautoregressive.jl  constrains.jl  defs.jl  mover.jl
src/utility/: spin_hamiltonians.jl
test/: gradients.jl  mps.jl  runtests.jl  util.jl
