cmake_minimum_required(VERSION 3.21)
project(interface_qcqc)

set(CMAKE_CXX_STANDARD 14)

add_executable(interface_qcqc
        mol_ham_data/b/gen_ham.py
        mol_ham_data/b/log
        mol_ham_data/b/qubit_op.data
        mol_ham_data/b/qubit_op_n.data
        mol_ham_data/b/qubit_op_s.data
        mol_ham_data/be/gen_ham.py
        mol_ham_data/be/log
        mol_ham_data/be/qubit_op.data
        mol_ham_data/be/qubit_op_n.data
        mol_ham_data/be/qubit_op_s.data
        mol_ham_data/beh2/gen_ham.py
        mol_ham_data/beh2/log
        mol_ham_data/beh2/log_100
        mol_ham_data/beh2/qubit_op.data
        mol_ham_data/beh2/qubit_op_n.data
        mol_ham_data/beh2/qubit_op_s.data
        mol_ham_data/c/gen_ham.py
        mol_ham_data/c/log
        mol_ham_data/c/qubit_op.data
        mol_ham_data/c/qubit_op_n.data
        mol_ham_data/c/qubit_op_s.data
        mol_ham_data/c2/gen_ham.py
        mol_ham_data/c2/qubit_op.data
        mol_ham_data/c2/qubit_op_n.data
        mol_ham_data/c2/qubit_op_s.data
        mol_ham_data/co2/gen_ham.py
        mol_ham_data/co2/qubit_op.data
        mol_ham_data/co2/qubit_op_n.data
        mol_ham_data/co2/qubit_op_s.data
        mol_ham_data/co2_116/gen_ham.py
        mol_ham_data/co2_116/qubit_op.data
        mol_ham_data/co2_116/qubit_op_n.data
        mol_ham_data/co2_116/qubit_op_s.data
        mol_ham_data/h2/gen_ham.py
        mol_ham_data/h2/qubit_op.data
        mol_ham_data/h2/qubit_op_n.data
        mol_ham_data/h2/qubit_op_s.data
        mol_ham_data/h2_054/gen_ham.py
        mol_ham_data/h2_054/log
        mol_ham_data/h2_054/qubit_op.data
        mol_ham_data/h2_054/qubit_op_n.data
        mol_ham_data/h2_054/qubit_op_s.data
        mol_ham_data/h2_059/gen_ham.py
        mol_ham_data/h2_059/log
        mol_ham_data/h2_059/qubit_op.data
        mol_ham_data/h2_059/qubit_op_n.data
        mol_ham_data/h2_059/qubit_op_s.data
        mol_ham_data/h2_064/gen_ham.py
        mol_ham_data/h2_064/log
        mol_ham_data/h2_064/qubit_op.data
        mol_ham_data/h2_064/qubit_op_n.data
        mol_ham_data/h2_064/qubit_op_s.data
        mol_ham_data/h2_068/gen_ham.py
        mol_ham_data/h2_068/log
        mol_ham_data/h2_068/qubit_op.data
        mol_ham_data/h2_068/qubit_op_n.data
        mol_ham_data/h2_068/qubit_op_s.data
        mol_ham_data/h2_078/gen_ham.py
        mol_ham_data/h2_078/log
        mol_ham_data/h2_078/qubit_op.data
        mol_ham_data/h2_078/qubit_op_n.data
        mol_ham_data/h2_078/qubit_op_s.data
        mol_ham_data/h2_084/gen_ham.py
        mol_ham_data/h2_084/log
        mol_ham_data/h2_084/qubit_op.data
        mol_ham_data/h2_084/qubit_op_n.data
        mol_ham_data/h2_084/qubit_op_s.data
        mol_ham_data/h2_095/gen_ham.py
        mol_ham_data/h2_095/log
        mol_ham_data/h2_095/qubit_op.data
        mol_ham_data/h2_095/qubit_op_n.data
        mol_ham_data/h2_095/qubit_op_s.data
        mol_ham_data/h2_105/gen_ham.py
        mol_ham_data/h2_105/log
        mol_ham_data/h2_105/qubit_op.data
        mol_ham_data/h2_105/qubit_op_n.data
        mol_ham_data/h2_105/qubit_op_s.data
        mol_ham_data/h2_127/gen_ham.py
        mol_ham_data/h2_127/log
        mol_ham_data/h2_127/qubit_op.data
        mol_ham_data/h2_127/qubit_op_n.data
        mol_ham_data/h2_127/qubit_op_s.data
        mol_ham_data/h2_2/gen_ham.py
        mol_ham_data/h2_2/qubit_op.data
        mol_ham_data/h2_2/qubit_op_n.data
        mol_ham_data/h2_2/qubit_op_s.data
        mol_ham_data/h2o/gen_ham.py
        mol_ham_data/h2o/qubit_op.data
        mol_ham_data/h2o/qubit_op_n.data
        mol_ham_data/h2o/qubit_op_s.data
        mol_ham_data/h2o_2/gen_ham.py
        mol_ham_data/h2o_2/qubit_op.data
        mol_ham_data/h2o_2/qubit_op_n.data
        mol_ham_data/h2o_2/qubit_op_s.data
        mol_ham_data/li2/gen_ham.py
        mol_ham_data/li2/log
        mol_ham_data/li2/log_100
        mol_ham_data/li2/qubit_op.data
        mol_ham_data/li2/qubit_op_n.data
        mol_ham_data/li2/qubit_op_s.data
        mol_ham_data/lih/gen_ham.py
        mol_ham_data/lih/qubit_op.data
        mol_ham_data/lih/qubit_op_n.data
        mol_ham_data/lih/qubit_op_s.data
        mol_ham_data/lih_120/gen_ham.py
        mol_ham_data/lih_120/log
        mol_ham_data/lih_120/qubit_op.data
        mol_ham_data/lih_120/qubit_op_n.data
        mol_ham_data/lih_120/qubit_op_s.data
        mol_ham_data/lih_134/gen_ham.py
        mol_ham_data/lih_134/log
        mol_ham_data/lih_134/qubit_op.data
        mol_ham_data/lih_134/qubit_op_n.data
        mol_ham_data/lih_134/qubit_op_s.data
        mol_ham_data/lih_144/gen_ham.py
        mol_ham_data/lih_144/log
        mol_ham_data/lih_144/qubit_op.data
        mol_ham_data/lih_144/qubit_op_n.data
        mol_ham_data/lih_144/qubit_op_s.data
        mol_ham_data/lih_164/gen_ham.py
        mol_ham_data/lih_164/log
        mol_ham_data/lih_164/qubit_op.data
        mol_ham_data/lih_164/qubit_op_n.data
        mol_ham_data/lih_164/qubit_op_s.data
        mol_ham_data/lih_174/gen_ham.py
        mol_ham_data/lih_174/log
        mol_ham_data/lih_174/qubit_op.data
        mol_ham_data/lih_174/qubit_op_n.data
        mol_ham_data/lih_174/qubit_op_s.data
        mol_ham_data/lih_184/gen_ham.py
        mol_ham_data/lih_184/log
        mol_ham_data/lih_184/qubit_op.data
        mol_ham_data/lih_184/qubit_op_n.data
        mol_ham_data/lih_184/qubit_op_s.data
        mol_ham_data/lih_200/gen_ham.py
        mol_ham_data/lih_200/log
        mol_ham_data/lih_200/qubit_op.data
        mol_ham_data/lih_200/qubit_op_n.data
        mol_ham_data/lih_200/qubit_op_s.data
        mol_ham_data/lih_220/gen_ham.py
        mol_ham_data/lih_220/log
        mol_ham_data/lih_220/qubit_op.data
        mol_ham_data/lih_220/qubit_op_n.data
        mol_ham_data/lih_220/qubit_op_s.data
        mol_ham_data/n2/gen_ham.py
        mol_ham_data/n2/qubit_op.data
        mol_ham_data/n2/qubit_op_n.data
        mol_ham_data/n2/qubit_op_s.data
        mol_ham_data/n2_080/gen_ham.py
        mol_ham_data/n2_080/log
        mol_ham_data/n2_080/qubit_op.data
        mol_ham_data/n2_080/qubit_op_n.data
        mol_ham_data/n2_080/qubit_op_s.data
        mol_ham_data/n2_090/gen_ham.py
        mol_ham_data/n2_090/log
        mol_ham_data/n2_090/qubit_op.data
        mol_ham_data/n2_090/qubit_op_n.data
        mol_ham_data/n2_090/qubit_op_s.data
        mol_ham_data/n2_100/gen_ham.py
        mol_ham_data/n2_100/log
        mol_ham_data/n2_100/qubit_op.data
        mol_ham_data/n2_100/qubit_op_n.data
        mol_ham_data/n2_100/qubit_op_s.data
        mol_ham_data/n2_110/gen_ham.py
        mol_ham_data/n2_110/log
        mol_ham_data/n2_110/qubit_op.data
        mol_ham_data/n2_110/qubit_op_n.data
        mol_ham_data/n2_110/qubit_op_s.data
        mol_ham_data/n2_140/gen_ham.py
        mol_ham_data/n2_140/log
        mol_ham_data/n2_140/qubit_op.data
        mol_ham_data/n2_140/qubit_op_n.data
        mol_ham_data/n2_140/qubit_op_s.data
        mol_ham_data/n2_160/gen_ham.py
        mol_ham_data/n2_160/log
        mol_ham_data/n2_160/qubit_op.data
        mol_ham_data/n2_160/qubit_op_n.data
        mol_ham_data/n2_160/qubit_op_s.data
        mol_ham_data/n2_180/gen_ham.py
        mol_ham_data/n2_180/log
        mol_ham_data/n2_180/qubit_op.data
        mol_ham_data/n2_180/qubit_op_n.data
        mol_ham_data/n2_180/qubit_op_s.data
        mol_ham_data/n2_200/gen_ham.py
        mol_ham_data/n2_200/log
        mol_ham_data/n2_200/qubit_op.data
        mol_ham_data/n2_200/qubit_op_n.data
        mol_ham_data/n2_200/qubit_op_s.data
        mol_ham_data/nh3/gen_ham.py
        mol_ham_data/nh3/qubit_op.data
        mol_ham_data/nh3/qubit_op_n.data
        mol_ham_data/nh3/qubit_op_s.data
        mol_ham_data/template/gen_ham.py
        mol_ham_data/template/h2-gen_ham.py
        mol_ham_data/template/n2-gen_ham.py
        mol_ham_data/gen.sh
        mol_ham_data/parse.sh
        mol_ham_data/reference_energy.txt
        read_tran.cpp)
